quon_na/tests/snapshots/report_snapshots__toy_move_entangle_measure_md.snap
---
source: quon_na/tests/report_snapshots.rs
expression: md
---
# Neutral-atom analytic resource report

## Qubit resources
| Metric | Value |
| --- | ---: |
| Logical qubits | 0 |
| Physical atoms | 0 |

## Schedule metrics
| Metric | Value |
| --- | ---: |
| Estimated cycles | 3 |
| Bottleneck | rearrangement |
| Rydberg stages | 2 |
| Rearrangement steps | 1 |
| Rearrangement time (µs) | 10 |
| Trap transfers | 1 |
| Transfer time (µs) | 6 |
| Entangle2 count | 1 |
| EntangleN count | 1 |
| Measurement rounds | 1 |
| Reset rounds | 1 |
| Wait time (µs) | 4 |
| Total time (µs) | 30 |

## Notes
- Compiler analytic metrics only — not fused with Python/Sinter sampled CSV; neither artifact is a threshold claim (ADR-0020).
- Field names align with TUM RAP Table I / Enola headline metrics.
- `estimated_cycles` is `layers.len()`; `bottleneck` is the max of rydberg stages / rearrangement time / transfer time / measurement rounds (ties → mixed; all-zero → none).
- Non-QEC reports omit atoms-per-logical and code-family rows.
